syntax = "proto3";

package v1.login_proto;

option go_package = "github.com/Park-Kwonsoo/Moving-server/api/protos/v1/auth";

// import "api/protos/google/api/annotations.proto";

service LoginService {
    rpc Login(LoginReq) returns (LoginRes) {
        // option (google.api.http) = { 
        //     post : "/auth/login" 
        //     body : "request"
        // };
    };

    rpc PasswordCheck(PasswordCheckReq) returns (PasswordCheckRes) {};
    rpc PasswordChange(PasswordChangeReq) returns (PasswordChangeRes) {};
}

message LoginReq {
    string loginType = 1;
    string memId = 2;
    string password = 3;
}

message LoginRes {
    string rsltCd = 1;
    string rsltMsg = 2;
    string token = 3;
}

message PasswordCheckReq {
    string token = 1;
    string oldPassword = 2;
}

message PasswordCheckRes {
    string rsltCd = 1;
    string rsltMsg = 2;
    bool isChecked = 3;
}

message PasswordChangeReq {
    string token = 1;
    string newPassword = 2;
}

message PasswordChangeRes {
    string rsltCd = 1;
    string rsltMsg = 2;
}
